CHANGES.txt - 01/13/2003
------------------------

CHANGES IN CUPS V1.1.19

	- Now timeout connections that have been shutdown (due
	  to errors) after 30 seconds instead of the Timeout
	  setting (300 seconds by default).  This provides
	  faster recovery from DoS attacks.
	- A denial-of-service attack warning message was being
	  written to the log files by the scheduler for every
	  detection.  This caused a DoS of its own in some
	  situations. The warning message is now written no more
	  than once per minute.
	- Fixed the CIE colorspace support code in the image and
	  PS RIPs.
	- The job-quota-period, job-page-limit, and job-k-limit
	  attributes were not flagged as integers, so setting
	  quotas would not work.
	- Added an additional response check in the scheduler to
	  more quickly recover from denial-of-service attacks.
	- The cupstestppd file was incorrectly installed in the
	  /usr/sbin directory instead of /usr/bin.
	- The EPM list file did not include the cupstestppd
	  program or man page files.


CHANGES IN CUPS V1.1.18

	- Fixed a bug in the Set-Job-Attributes code in the
	  scheduler that would cause it to crash or continuously
	  write a job control file.
	- SECURITY FIX: The scheduler now provides a FileDevice
	  directive to control whether new printers can be added
	  using device URIs of the form "file:/filename".  The
	  default is to not allow printers with these device
	  URIs.
	- The scheduler did not compute the cost of filters
	  properly, nor did it choose a multi-filter solution
	  with a lower cost than a single filter solution.
	- Now install CUPS PPD file test utility (cupstestppd)
	  to support basic conformance testing of PPD files.
	- The scheduler now logs an error message when it sees a
	  non-conforming PPD file.
	- Upgraded pdftops filter to Xpdf 2.01 with fixes for
	  TrueType fonts.
	- Added a MaxClientsPerHost configuration directive to
	  provide limited protection against Denial of Service
	  attacks.